# LHCb_VeLo_Toy_Model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  George_Sandbox.ipynb  HHL.py  HHL_Direct_Synthesis for the hovies.py  HHL_Direct_Synthesis.py  LICENSE  README.md  RESTRUCTURING_PROPOSAL.md  classical_benchmarking_HHL.py  demo_workflow.ipynb  events_store.json  function_of_evolution.py  hhl_algorithm.py  hhl_algorithm_.py  hhl_algorithm_1bit.py  hhl_algorithm_OAA.py  metrics.csv  metrics_erf.csv  multi_scattering_example.py  my_circuit.qasm  my_circuit.qpy  perf_ghost_vs_ms.csv  perf_grid_hit_eff_vs_drop_ALL_MS.csv  perf_hit_eff_vs_drop.csv  perf_hit_eff_vs_drop_ALL_MS.csv  perf_hit_eff_vs_drop_ms0.0002.csv  perf_hit_eff_vs_drop_ms0.0006000000000000001.csv  perf_hit_eff_vs_drop_ms_0.0000000.csv  perf_hit_eff_vs_drop_ms_0.0002000.csv  perf_hit_eff_vs_drop_ms_0.0004000.csv  perf_hit_eff_vs_drop_ms_0.0006000.csv  perf_hit_eff_vs_drop_ms_0.0008000.csv  perf_hit_eff_vs_drop_ms_0.0010000.csv  perf_hit_eff_vs_ms.csv  perf_hit_purity_vs_drop.csv  perf_hit_purity_vs_drop_ALL_MS.csv  perf_hit_purity_vs_drop_ms0.0.csv  (+20 more)
.github/workflows/: ci.yml
LHCB_Velo_Toy_Models/: __init__.py  hamiltonian.py  multi_scattering_generator.py  simple_hamiltonian.py  simple_hamiltonian_cpp.py  state_event_generator.py  state_event_model.py  toy_validator.py
LHCB_Velo_Toy_Models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Quantum_examples/: Bloch.py
deprecated/: OneBQF.py  README.md
deprecated/LHCB_Velo_Toy_Models/: __init__.py  hamiltonian.py  simple_hamiltonian.py  state_event_generator.py  state_event_model.py  toy_validator.py
docs/: API_REFERENCE.md  DEPENDENCIES.md  FLOW_DIAGRAMS.md  WORKFLOW_OVERVIEW.md  index.md  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc  presentation.vrb
notebooks/: classical_end_to_end.ipynb  quantum_1bqf_end_to_end.ipynb  quantum_hhl_end_to_end.ipynb
old_plots/: metrics.csv  metrics_threshold.csv  perf_ghost_vs_hitres.csv  perf_ghost_vs_ms.csv  perf_hit_eff_vs_drop_ms0.0.csv  perf_hit_eff_vs_drop_ms0.001.csv  perf_hit_eff_vs_drop_ms_0.0008000.csv  perf_hit_eff_vs_ms.csv  perf_hit_purity_vs_drop_ms0.001.csv  perf_hit_purity_vs_drop_ms_0.0002000.csv  perf_hit_purity_vs_drop_ms_0.0004000.csv  perf_hit_purity_vs_drop_ms_0.0006000.csv  perf_hit_purity_vs_drop_ms_0.0008000.csv  perf_hit_purity_vs_drop_ms_0.0010000.csv  perf_track_eff_vs_ms.csv
src/LHCB_Velo_Toy_Models/detector_geometries/: geometries.py
src/LHCB_Velo_Toy_Models/state_event_generator/: state_event_generator.py
src/LHCB_Velo_Toy_Models/state_event_model/: state_event_model.py
src/lhcb_velo_toy/: __init__.py
src/lhcb_velo_toy/analysis/: __init__.py
src/lhcb_velo_toy/analysis/plotting/: __init__.py  event_display.py  performance.py
src/lhcb_velo_toy/analysis/validation/: __init__.py  match.py  validator.py
src/lhcb_velo_toy/core/: __init__.py  types.py
src/lhcb_velo_toy/generation/: __init__.py
src/lhcb_velo_toy/generation/entities/: __init__.py  event.py  hit.py  module.py  primary_vertex.py  segment.py  track.py
src/lhcb_velo_toy/generation/generators/: __init__.py  base.py  state_event.py
src/lhcb_velo_toy/generation/geometry/: __init__.py  base.py  plane.py  rectangular_void.py
src/lhcb_velo_toy/generation/models/: __init__.py  event.py  hit.py  module.py  primary_vertex.py  segment.py  track.py
src/lhcb_velo_toy/persistence/: __init__.py  pipeline.py  study.py
src/lhcb_velo_toy/solvers/: __init__.py
src/lhcb_velo_toy/solvers/classical/: __init__.py  solvers.py
src/lhcb_velo_toy/solvers/hamiltonians/: __init__.py  base.py  fast.py  simple.py
src/lhcb_velo_toy/solvers/quantum/: HHL.py  OneBQF.py  QSVT.py  __init__.py  hhl.py  one_bit_hhl.py
src/lhcb_velo_toy/solvers/reconstruction/: __init__.py  segment.py  track_finder.py
tests/: __init__.py  conftest.py  test_core.py  test_hhl.py
