[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velo-toy"
version = "1.0.0"
description = "Quantum-inspired Hamiltonian track reconstruction for LHCb VELO detector"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "George William Scriven", email = "george.scriven@example.com"}
]
maintainers = [
    {name = "George William Scriven", email = "george.scriven@example.com"}
]
keywords = [
    "quantum computing",
    "track reconstruction",
    "particle physics",
    "LHCb",
    "VELO",
    "HHL algorithm",
    "Hamiltonian",
    "high energy physics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "dill>=0.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.45",
    "qiskit-aer>=0.12",
]
notebook = [
    "ipykernel>=6.0",
    "jupyterlab>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]
all = [
    "velo-toy[quantum,notebook,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/GeorgeWilliam1999/LHCb_VeLo_Toy_Model"
Documentation = "https://github.com/GeorgeWilliam1999/LHCb_VeLo_Toy_Model#readme"
Repository = "https://github.com/GeorgeWilliam1999/LHCb_VeLo_Toy_Model.git"
Issues = "https://github.com/GeorgeWilliam1999/LHCb_VeLo_Toy_Model/issues"
Changelog = "https://github.com/GeorgeWilliam1999/LHCb_VeLo_Toy_Model/blob/main/CHANGELOG.md"

[project.scripts]
velo-run = "velo_toy.cli:run_experiment_cli"
velo-aggregate = "velo_toy.cli:aggregate_cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["velo_toy", "velo_toy.core", "velo_toy.experiments", "velo_toy.analysis"]
include-package-data = true

[tool.setuptools.package-data]
velo_toy = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
    "build/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=velo_toy --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/velo_toy"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
